changed body height to min-height, re-added main properties to fix overlapping header and yield contents

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,15 +21,6 @@
 @import "materialize";
 
 // HTML Elements
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
-html {
-  scroll-behavior: smooth;
-}
 
 * {
   box-sizing: border-box;
@@ -43,12 +34,16 @@ html {
 
 body {
   display: flex;
-  //min-height: 100vh;
+  min-height: 100vh;
   width: 100%;
-  height: 100vh;
+  //height: 100vh;
   flex-direction: column;
   color: $cuisinero-black-dark;
   font-family: $lato !important;
+}
+
+main {
+  flex: 1 0 auto;
 }
 
 ul li {
